# design-patterns-for-humans

./: .clang-uml  CMakeLists.txt  readme2.md
diagrams/: AbstractFactory_class.puml  FactoryMethod_class.puml  SimpleFactory_class.puml
src/: AbstractFactory.cpp  FactoryMethod.cpp  SimpleFactory.cpp
